Introduce ESP Presense support.